<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_background"
    tools:context=".Main3Activity">

    <ImageView
        android:id="@+id/img3"
        android:layout_width="331dp"
        android:layout_height="207dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/imgLarge" />

    <TextView
        android:id="@+id/finalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="232dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/txtFinal"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/img3"
        android:layout_alignBottom="@+id/button4"
        android:text="Button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/img3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="148dp"
        android:text="@string/mpsButton" />

</RelativeLayout>